[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hlcare"
version = "0.0.1"
authors = [
  { name="Hamed Sh.", email="hamed.shourabi@gmail.com" },
]
description = "A small package to run experiments locally and store results and log files/messages."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hshurabi/expr.git"
"Bug Tracker" = "https://github.com/hshurabi/expr.git"